Bug 18950 - [965 EXA] font corruption
Summary: [965 EXA] font corruption
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/EXA (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 19167 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-08 07:15 UTC by Eatdirt
Modified: 2009-05-15 07:31 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.conf (in working XAA mode) (2.38 KB, text/plain)
2008-12-08 07:16 UTC, Eatdirt
no flags Details
Take client clip type into account for pixmap migration (586 bytes, patch)
2009-05-05 10:44 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Eatdirt 2008-12-08 07:15:46 UTC
Hi, in EXA mode with this version of Xorg:

X.Org X Server 1.5.3
Release Date: 5 November 2008
X Protocol Version 11, Revision 0
Build Operating System: Linux_2.6.22.18-server-1mdv Mandriva

I got font corruption on various applications, as xmgrace and others. Switching back to XAA mode solves the problem.

The graphic card is:

00:02.1 Display controller: Intel Corporation 82Q963/Q965 Integrated Graphics Controller (rev 02)

and the xorg.conf (with XAA forced) is attached.

Cheers,
Christophe.
Comment 1 Eatdirt 2008-12-08 07:16:29 UTC
Created attachment 20898 [details]
xorg.conf (in working XAA mode)
Comment 2 Eric Piel 2008-12-09 01:54:17 UTC
I can reproduce it here, with xmgrace: the fonts in the graph are shown as black noisy squares. However, I cannot notice this in any other program. GTK and QT programs work fine. xedit, xmag are fine as well. The widgets of xfontsel are displayed correctly, however, it doens't show any font in the font display (but I haven't checked if in XAA it works).

I also have a 64bits computer with server 1.5.3 (on Mandriva cooker). Driver is intel 2.5.1, with a :
00:02.1 Display controller: Intel Corporation Mobile GM965/GL960 Integrated Graphics Controller (rev 0c)
Comment 3 Michel Dänzer 2008-12-11 02:00:08 UTC
Unless this can be reproduced with other drivers, it's probably a driver issue.
Comment 4 fnevgeny 2009-05-05 09:14:36 UTC
I don't know about other applications (?) mentioned in the original report, but the problem with xmgrace is not a font issue at all. See latest comments to <https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-video-intel/+bug/325169>. Hopefully the simple demo attached will help you tracking the bug down.
Comment 5 Michel Dänzer 2009-05-05 10:44:54 UTC
Created attachment 25473 [details] [review]
Take client clip type into account for pixmap migration

> Hopefully the simple demo attached will help you tracking the bug down.

Yes, simple demos to reproduce bugs are usually very helpful.

Does this xserver patch fix the demo/xmgrace with EXA?
Comment 6 fnevgeny 2009-05-06 08:12:21 UTC
Yes it does, thanks - great & fast work! Can you please explain why only Intel hardware is affected?
Comment 7 Michel Dänzer 2009-05-07 03:12:24 UTC
(In reply to comment #6)
> Yes it does, thanks - great & fast work!

Well, it's not the final fix yet - there are other places which need the same treatment.

> Can you please explain why only Intel hardware is affected?

Doesn't look like that's the case after all.
Comment 8 fnevgeny 2009-05-07 07:29:17 UTC
(In reply to comment #7)

> Doesn't look like that's the case after all.

Yeah, the patch is generic; but can you reproduce the bug with any other driver? All reports I've seen so far are from Intel-hardware owners:

<https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-video-intel/+bug/325169>
<https://bugzilla.redhat.com/show_bug.cgi?id=484273>
<http://plasma-gate.weizmann.ac.il/Grace/phpbb/viewtopic.php?t=1547>
<http://plasma-gate.weizmann.ac.il/Grace/phpbb/viewtopic.php?t=1557>
<http://plasma-gate.weizmann.ac.il/Grace/phpbb/viewtopic.php?t=1657>

Comment 9 fnevgeny 2009-05-14 02:11:13 UTC
OK, there is now an evidence the bug affects other hardware, too: <https://bugzilla.redhat.com/show_bug.cgi?id=493131>
Comment 10 fnevgeny 2009-05-14 02:19:01 UTC
*** Bug 19167 has been marked as a duplicate of this bug. ***
Comment 11 fnevgeny 2009-05-14 02:24:00 UTC
i386 is also affected.
NetBSD is also affected.
Comment 12 Michel Dänzer 2009-05-15 07:31:08 UTC
Fix pushed to Git master and nominated for server-1.6-branch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.